added basketCalculationsTest part 1

--- a/SeleniumAdvancedPart2/src/main/resources/config.yaml
+++ b/SeleniumAdvancedPart2/src/main/resources/config.yaml
@@ -22,6 +22,7 @@ environments:
     artCategoryText: Framed poster and vector images
     BasketPopupTestWantedProduct: THE BEST IS YET POSTER
     BasketPopupTestQuantity: 3
+    RepetitionForBasketCalculations: 5
     shippingPrice: 7
 
 
