checkout test, not working login, null password 13 12

--- a/SeleniumAdvancedPart2/src/main/resources/config.yaml
+++ b/SeleniumAdvancedPart2/src/main/resources/config.yaml
@@ -24,6 +24,8 @@ environments:
     BasketPopupTestQuantity: 3
     RepetitionForBasketCalculations: 5
     shippingPrice: 7
+    email: gandalf@10g.pl
+    password: test123
 
 
 
