checkout test working 15/12

--- a/SeleniumAdvancedPart2/src/main/resources/config.yaml
+++ b/SeleniumAdvancedPart2/src/main/resources/config.yaml
@@ -26,6 +26,7 @@ environments:
     shippingPrice: 7
     email: gandalf@10g.pl
     password: test123
+    paymentStatus: Awaiting check payment
 
 
 
